# TurnCoatChess

./: README.md  SwapChess.py  pyproject.toml
.junie/: guidelines.md
tests/: test_coin.py  test_rules.py
turncoat_chess/: __init__.py  coin.py  engine.py  rules.py
